# gen-interface-kr

./: .gitignore  LICENSE  Makefile  README.ja.md  README.ko.md  README.md  pyproject.toml
.github/workflows/: pages.yml  release.yml
docs/: ARCHITECTURE.ja.md  ARCHITECTURE.ko.md  ARCHITECTURE.md
site/: README.md  index.html  package-lock.json  package.json  vite.config.ts
site/scripts/: build-composition-shapes.mjs
site/src/: App.tsx  config.ts  styles.css  vite-env.d.ts
site/src/sections/: Composition.tsx  CompositionGlyphText.tsx  Footer.tsx  Hero.tsx  Reading.tsx  SectionHead.tsx  Slider.tsx  TypeTester.tsx  Variations.tsx
src/: README.md
src/font/: README.md  __init__.py  build.py  proportional.py  site_subset.py
src/release/: README.md  build.py
src/webfont/: README.md  __init__.py  benchmark.mjs  build.py
tests/: conftest.py  test_font_build.py  test_proportional.py  test_release.py  test_webfont_build.py
