[project]
name = "gen-interface-jp"
version = "0.1.2"
description = "Typeface harmonizing Latin and Japanese for digital interfaces."
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "ofl-font-baker>=0.3.6",
    "freetype-py>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
