[project]
name = "gen-interface-jp"
version = "0.1.5"
description = "Typeface harmonizing Latin and Korean for digital interfaces."
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "ofl-font-baker>=0.4.2",
    "freetype-py>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
